tests/parser/invalid/syntax_errors/test_missing_rbrace.src
fn f() { int x = 1;
