tests/parser/invalid/syntax_errors/test_missing_rbrace.expected
Program [line 1]:
[line 2:1] Parse error: Expected '}'
